apps/support/tactical-rmm/overlays/homelab/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmm-api
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmm-daphne
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmm-nginx
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmm-celery
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmm-celerybeat
spec:
  replicas: 1
