apps/support/tactical-rmm/overlays/homelab/patch-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tactical-rmm
spec:
  tls:
    - hosts: ["rmm.support4u.se"]
      secretName: rmm-support4u-tls
    - hosts: ["api.rmm.support4u.se"]
      secretName: rmm-api-support4u-tls
    - hosts: ["mesh.support4u.se"]
      secretName: mesh-support4u-tls
  rules:
    - host: rmm.support4u.se
    - host: api.rmm.support4u.se
    - host: mesh.support4u.se
